Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.5.2
-
None
-
Xubuntu 12.04 32bit and Ubuntu 10.04 32bit
VirtualBox
-
67bf8aa863edfcdb655e062ce4a9ac68bb2ed608
Description
1. Open Qt Creator
2. Create new header file
3. press yy on #endif // TEST_H
4. j to move down to bottom of file
5. hold p
Program crashes after line 56
Was unable to reproduce under Windows but occurred on two separate Linux VMs.
Attachments
For Gerrit Dashboard: QTCREATORBUG-8148 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
38884,2 | fakevim: Fix crash when setting cursor position in edit block | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |